# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: build.yml  my_workflow.yml  pyci.yml
task_manager/: __init__.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: tasks.json  test_labels.json  test_users.json  users.json
task_manager/labels/: forms.py  models.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: mixins.py  models.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: application.html  index.html  login.html
task_manager/tests/: test_tasks.py  test_users.py
task_manager/users/: mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
