[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django==5.2.5",
    "django-bootstrap5>=25.2",
    "django-filter>=25.1",
    "django-i18n>=1.0.5",
    "django-rosetta>=0.10.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "uvicorn>=0.35.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]
